--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".TextActivity"
+        tools:ignore="MissingClass"></activity>
+
+        <activity android:name=".ListViewActivity"
             tools:ignore="MissingClass"></activity>
     </application>
 
