--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:name=".ListOneActivity"
             tools:ignore="MissingClass"></activity>
 
+        <activity
+            android:name=".FragmentForActivity"
+            tools:ignore="MissingClass"></activity>
+
+
     </application>
 
 </manifest>
