--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
             android:name=".FragmentForActivity"
             tools:ignore="MissingClass"></activity>
 
+        <activity
+            android:name=".DynamicFragmentActivity"
+            tools:ignore="MissingClass"></activity>
 
     </application>
 
