--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".DynamicFragmentActivity"
             tools:ignore="MissingClass"></activity>
 
+        <activity
+            android:name=".SendMsgToActivity"
+            tools:ignore="MissingClass"></activity>
+
     </application>
 
 </manifest>
