--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".SendMsgToActivity"
             tools:ignore="MissingClass"></activity>
 
+        <activity
+            android:name=".SharePreferenceActivity"
+            tools:ignore="MissingClass"></activity>
+
     </application>
 
 </manifest>
