--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,12 @@
             android:name=".SharePreferenceActivity"
             tools:ignore="MissingClass"></activity>
 
+        <activity
+            android:name=".ServiceActivity"
+            tools:ignore="MissingClass"></activity>
+
+        <service android:name="service.NormalService"></service>
+
     </application>
 
 </manifest>
