--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name=".ServiceActivity"
             tools:ignore="MissingClass"></activity>
 
+        <activity
+            android:name=".ThreadActivity"
+            tools:ignore="MissingClass"></activity>
+
         <service android:name="service.NormalService"></service>
 
     </application>
